02 July 2007

* Sort out the localtime(3)/strftime(3) mess by actually reading the man page
  and time.h. This means July is now the seventh rather than sixth month. 
  Reported by Giorgio Lando.

29 June 2007

* Split parse helper functions out into parse-fn.c and do lots of other cleanup 
  of parse.y and lex.c.
* New lexer makes ifdef/ifndef/endif possible, although not completely elegant.
  Syntax is: ifdef $macro .... endif. Note that stuff inside ifdefs must still
  be valid syntax!
* Scrap use of lex in favour of custom C lexer. This allows (yet another)
  workaround for include files, to make stuff like this work:

	$host = $(hostname)
	include "file.${host}"

* Combine multiple IMAP deletions together into one command where possible,
  although I doubt it makes any actual difference.

28 June 2007

* Shell commands may now be called when parsing the ruleset using $() and %()
  operators:

	%year = %(date +%y)

	$arch = $(uname -m)
	
  These are executed at parse time. Sections between the brackets within "s
  are subject to escape and macro replacement as normal; parts outside
  quotes or inside 's are not. For example:

	$SHELL = "test"
	$cmd = $(echo "${SHELL} $SHELL \${SHELL}")

  Takes advantage of the fact that fdm requires {}s and the shell does not to
  yield:

	added macro "$cmd": "test /bin/ksh /bin/ksh"

  As with macros, commands may be used at any point a string or number is
  appropriate.
* The mail time tags (mail_year, mail_quarter, etc) now use underscores in their
  names rather than dashes, for consistency.
* Deliver append-string is no more, it is trivially replaced using rewrite.
* Built-in cache using TDB (http://sourceforge.net/projects/tdb/). Currently
  disabled by default, enabled by building with make -DDB.

  Used as followed;

	# Declare the cache.
	$db = "~/.fdm.db"
	cache $db expire 2 weeks

	match not string "%[message_id]" to "" {
		# Filter messages already in the cache.	
		match in-cache $db key "%[message_id]"