@@ -1,5 +1,8 @@
 02 July 2007
 
+* If a mail has no body, insert new headers at the start instead of the end.
+  This matches formail's behaviour. Requested by Giorgio Lando. Note there is
+  no change to the regexp "in body" behaviour, although perhaps there should be.
 * Sort out the localtime(3)/strftime(3) mess by actually reading the man page
   and time.h. This means July is now the seventh rather than sixth month. 
   Reported by Giorgio Lando.
@@ -402,4 +405,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.100 2007-07-02 22:41:44 nicm Exp $
+$Id: CHANGES,v 1.101 2007-07-02 23:56:33 nicm Exp $
